--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>imad-eddine-portfolio-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Imad Eddine Portfolio</title>
+    <meta name="description" content="Imad Eddine's Portfolio Website" />
+    <meta name="author" content="Imad Eddine" />
 
-    <meta property="og:title" content="imad-eddine-portfolio-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Imad Eddine Portfolio" />
+    <meta property="og:description" content="Imad Eddine's Portfolio Website" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
@@ -17,10 +17,8 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+  <body class="bg-background text-foreground">
+    <div id="root" class="min-h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
