Update index.html title and add favicon; refine dark mode implementation in Tailwind config; enhance About, Contact, and Hero components with improved styling and content; remove unused sections for better clarity and user experience.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Imad Eddine Portfolio</title>
+    <title>ImadLab</title>
     <meta name="description" content="Imad Eddine's Portfolio Website" />
     <meta name="author" content="Imad Eddine" />
 
@@ -15,6 +16,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <script>
+      // Set dark mode class on document root element
+      document.documentElement.classList.add('dark');
+    </script>
   </head>
 
   <body class="bg-background text-foreground">
